<resources>

    <string name="app_name">Super Duo 2.0</string>

    <!-- Menu actions -->
    <string name="action_search">Search</string>
    <string name="action_add">Add Book</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>

    <!-- BookListFragment strings -->
    <string name="title_bookslist">List of Books</string>
    <string name="empty_book_list">No books found</string>

    <!-- DetailFragment strings -->
    <string name="title_bookdetails">Book Details</string>
    <string name="share_text">A must read book: </string>
    <string name="book_cover">Book Cover</string>

    <!-- AddBooksFragment strings -->
    <string name="title_addbooks">Add Books</string>
    <string name="no_internet_connection">No network connection is available. Unable to fetch remote book data.</string>
    <string name="input_hint">Enter ISBN-13</string>
    <string name="scan_button">Scan</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">Next</string>

    <!-- Barcode scanning strings -->
    <string name="title_activity_barcode_scanner">Barcode Scanner</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

</resources>