<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jagr.example.alexandria.fragments.AddBooksFragment">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/no_internet_connection"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/eancontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/ean"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="@integer/ean_size"
            android:hint="@string/input_hint"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <include android:id="@+id/book_details"
        layout="@layout/detail_layout"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/buttoncontainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok_button" />

    </LinearLayout>

</LinearLayout>